# ai-chat

./: .env.sample  .gitignore  README.md  app.py  config.yaml  demo.yaml  invoke-shiftjis.yaml  invoke-utf8.yaml  main.py  pyproject.toml  run.py  server.py  tasks.py
frontend/: index.html  script.js  style.css
src/: app_context.py  chat.py  logger.py  turn_manager.py  utils.py
src/asr/: gemini_asr.py  vad_based_asr.py  vosk_asr.py  whisper_asr.py
src/img/: base.py  fastsd.py  gemini_img.py
src/llm/: common.py  llm.py
src/lmm/: common.py  img.py  llm.py
src/tts/: aivisspeech.py  base.py  coeiroink.py  voicevox.py
