[project]
name = "ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "faster-whisper>=1.1.1",
    "google-genai>=1.27.0",
    "invoke>=2.2.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.71",
    "langchain-google-genai>=2.1.8",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "vosk>=0.3.45",
    "webrtcvad>=2.0.10",
]
