[project]
name = "ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "fastapi>=0.116.1",
    "faster-whisper>=1.1.1",
    "google-genai>=1.27.0",
    "invoke>=2.2.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.71",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "pillow>=11.3.0",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "streamlit>=1.47.1",
    "uvicorn[standard]>=0.35.0",
    "vosk>=0.3.45",
    "webrtcvad>=2.0.10",
]
