[project]
name = "ai-chat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.13",
    "fastapi>=0.116.1",
    "faster-whisper>=1.1.1",
    "google-genai>=1.27.0",
    "invoke>=2.2.0",
    "langchain>=0.3.27",
    "langchain-core>=0.3.71",
    "langchain-google-genai>=2.1.8",
    "langchain-ollama>=0.3.6",
    "langchain-openai>=0.3.28",
    "pillow>=11.3.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "python-socketio>=5.13.0",
    "requests>=2.32.3",
    "sounddevice>=0.5.1",
    "soundfile>=0.13.1",
    "streamlit>=1.47.1",
    "uvicorn[standard]>=0.35.0",
    "vosk>=0.3.45",
    "webrtcvad>=2.0.10",
]

[dependency-groups]
dev = [
    "ruff>=0.12.5",
]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "E", "W", "F",  # ほぼ必須
    "I",            # importのソート
    "UP",           # 古い記法のアップグレード
    "C90",          # 複雑度チェック (しきい値は調整)
    "B",            # バグの可能性を指摘
    "A",            # ビルトインのシャドウイング
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "C901",  # too complex (for business logic)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
